refactored header styles, fixing is done here, hide stuff on mobile

--- a/docroot/themes/custom/degov/source/sass/components/_header.scss
+++ b/docroot/themes/custom/degov/source/sass/components/_header.scss
@@ -9,30 +9,54 @@
 	position: relative;
 	z-index: 0;
 }
-.is-sticky header {
-	#block-searchform,
-	#block-degov-socialmedialinks,
-	#block-languageswitcher{
-		display: none;
+
+// simplify on mobile
+.block-social-media-links,
+.search-block-form,
+.block-language {
+	display: none;
+}
+@include larger-than($screen-sm-min) {
+	.block-social-media-links,
+	.search-block-form,
+	.block-language {
+		display: block;
 	}
-	.branding {
-		position: relative;
-		top: $vertical-gutter-width;
-		img {
-			max-height: $vertical-gutter-width;
-			width: auto;
-		}
+	.header-wrapper {
+		position: fixed;
+		left: 0;
+		top: 0;
+		right: 0;
+	}
+	.toolbar-fixed .header-wrapper {
+		top: 39px;
+	}
+	body {
+		padding-top: 95px !important;
+	}
+	.toolbar-fixed {
+		padding-top: 130px !important;
 	}
 }
+
 .header-wrapper .name {
 	display: none;
 }
 .header-wrapper .branding {
 	float: left;
-	@include smaller-than($screen-tablet) {
-		padding-left: $grid-gutter-width / 2;
-		padding-top: $vertical-gutter-width / 4;
-		padding-bottom: $vertical-gutter-width / 2;
+	// @TODO: refactor this:
+	position: relative;
+	top: $vertical-gutter-width;
+	margin-left: $grid-gutter-width/2;
+	img {
+		max-height: $vertical-gutter-width;
+		width: auto;
+	}
+	@include larger-than($screen-sm-min) {
+		margin-left: 0;
+		img {
+			max-height: 99999px;
+		}
 	}
 }
 .header-wrapper {
